# neko2020

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  neko2020.spec  neko2020_runner.lnk  pyproject.toml
.github/: dependabot.yml
config/: default_config.yml
neko2020/: __main__.py  neko.py  pet.py  runner.py
neko2020/utils/: classes.py  configs.py  files.py  images.py
tests/: test_neko2020.py
