[tool.poetry]
name = "neko2020"
version = "0.1.0"
description = "Cross-Platform oneko implementation with python"
authors = ["Yoshioka Shun <tajas2006@gmail.com>"]
repository = "https://github.com/tajas20006/neko2020"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"
"infi.systray" = "^0.1.12"
pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^20.8b1"
pyinstaller = "^4.0"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"
pywin32 = "^228"
flake8 = "^3.8.4"
pre-commit = "^2.12.1"

[tool.black]
line-length = 79
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

