[tool.poetry]
name = "neko2020"
version = "0.1.0"
description = "Cross-Platform oneko implementation with python"
authors = ["Yoshioka Shun <tajas2006@gmail.com>"]
repository = "https://github.com/tajas20006/neko2020"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
"infi.systray" = "^0.1.12"
pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.10"
pyinstaller = "^4.5"
pywin32-ctypes = "^0.2.0"
pefile = "^2022.5.30"
pywin32 = "^304"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"

[tool.black]
line-length = 79
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

